tests/sumo/errors/traffic_lights/loaded_phase_shorter/options.sumo
-n net.net.xml -a input_additional.add.xml


